Links to test linking on html page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Tempus Weather</title>
 </head>
 <body>
-<h1>This is the webpage</h1>
+<h1>This is the webpage.</h1>
+<h2>Click on a link to test deep and universal linking</h2>
+<p><a href="tempusweather://www.tempusweather.com/WeatherDetails?lat=37.76486&long=-122.50841">Deep Link</a></p>
+<p><a href="https://www.tempusweather.com/WeatherDetails?lat=37.76486&long=-122.50841">Universal Link Link</a></p>
 </body>
 </html>
